因为Java15移除了nashorn,需要重新添加依赖